# eth-connector

./: .catalog-info.yaml  .fossa.yml  .gitignore  Cargo.toml  Makefile  README.md
.buildkite/: pipeline.yml
.github/workflows/: pipeline.yml  sigma-prime.yml
eth-custodian/: .gitignore  .soliumrc.json  Makefile  dist.sh  hardhat.config.js  package.json
eth-custodian/.openzeppelin/: sepolia.json
eth-custodian/contracts/: BlockHeightFromProofExtractor.sol  EthCustodian.sol  EthCustodianProxy.sol  ProofKeeper.sol  ProofKeeperGap.sol  SelectivePausableUpgradable.sol
eth-custodian/contracts/test/: NearProverMock.sol  ProofKeeperInheritorMock.sol
eth-custodian/patches/: rainbow-bridge+1.0.0.patch
eth-custodian/scripts/: aurora_init_eth_connector.js  aurora_utils.js  call_deposit.js  call_withdraw.js  deploy_contracts.js  eth_deploy_contracts.js  eth_deploy_proxy.js  eth_deposit.js  eth_finalise_deposit_to_near.js  eth_finalise_withdraw_from_near.js  eth_finalize_withdraw_from_near.js  eth_generate_proof.js  eth_get_prover_address.js  eth_upgrade_proxy.js  eth_utils.js  eth_withdraw.js  generate_eip712_msgs.js  misc_utils.js  near_finalise_deposit_from_eth.js  near_finalise_withdraw.js  near_finalize_deposit_from_eth.js  near_utils.js  near_withdraw_to_eth.js  update_admin.js  update_admin_proxy.js
eth-custodian/scripts/json/: erc20-connector.json  ethereum-config-mainnet.json  ethereum-config.json  test-ethereum-config.json
eth-custodian/test/: EthCustodian.js  EthCustodianProxy.js  ProofKeeper.js  proof_template.json  proof_template_from_testnet.json
evm-fungible-token/: Cargo.toml  build.sh  connector.rs
evm-fungible-token/src/: deposit_event.rs  lib.rs  prover.rs  withdraw_event.rs
evm-fungible-token/src/connector/: deposit_event.rs  lock_event.rs  mod.rs  prover.rs  unlock_event.rs  withdraw_event.rs
evm-fungible-token/src/fungible_token/: fungible_token_core.rs  fungible_token_metadata.rs  internal.rs  mod.rs  storage_manager.rs
evm-fungible-token/tests/: general.rs
pure-eth-connector/: Cargo.toml  Makefile  build.sh  rust-toolchain
pure-eth-connector/src/: connector.rs  deposit_event.rs  fungible_token.rs  json.rs  lib.rs  log_entry.rs  prover.rs  sdk.rs  types.rs
pure-eth-connector/src/ethabi/: constructor.rs  contract.rs  decoder.rs  encoder.rs  errors.rs  event.rs  event_param.rs  filter.rs  function.rs  log.rs  mod.rs  operation.rs  param.rs  signature.rs  tests.rs  util.rs
pure-eth-connector/src/ethabi/param_type/: deserialize.rs  mod.rs  param_type.rs  reader.rs  writer.rs
pure-eth-connector/src/ethabi/token/: lenient.rs  mod.rs  strict.rs  token.rs
pure-eth-connector/src/fungible_token/: core.rs  mod.rs
pure-eth-connector/tests/: contract.rs  general.rs
res/: EthCustodian.full.abi  ProofKeeperInheritorMock.full.abi
tests-pure-eth-connector/: Cargo.toml  Makefile
tests-pure-eth-connector/tests/: connector.rs  general.rs
