[package]
name = "eth-connector"
version = "0.1.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"
license = "Apache2"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
debug-assertions = false

[dependencies]
wee_alloc = { version = "0.4.5", default-features = false }
borsh = { version = "0.8.1", default-features = false }
near-sdk = "2.0"
