[package]
name = "eth-connector"
version = "0.1.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"
license = "Apache2"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
debug-assertions = false

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
# TODO: upgrade it
near-sdk = { git = "https://github.com/near/near-sdk-rs", rev = "1d3535bd131b68f97a216e643ad1cba19e16dddf"}
# near-sdk = "0.11"
borsh = "0.8.1"
uint = { version = "0.8.3", default-features = false }
wee_alloc = { version = "0.4.5", default-features = false, features = [] }
# TODO: temporary solution
# near-lib = { git = "https://github.com/ilblackdragon/balancer-near", rev = "a386305c9829d2e5302a78fdc475c8a279fcf6ed"}
# eth-types =  { git = "https://github.com/near/rainbow-bridge" }
rlp = "0.4.2"
ethabi = "12.0.0"
hex = "0.4.2"
tiny-keccak = "1.4.0"
