[package]
name = "eth-connector"
version = "0.1.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"
license = "Apache2"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
debug-assertions = false

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs", rev = "1d3535bd131b68f97a216e643ad1cba19e16dddf"}
# near-sdk = { path = "../../near-sdk-rs/near-sdk" }
eth-types =  { git = "https://github.com/near/rainbow-bridge" }
rlp = "0.4.2"
ethabi = "12.0.0"
hex = "0.4.2"

[dev-dependencies]
near-sdk-sim = { path = "../../near-sdk-rs/near-sdk-sim" }
