[package]
name = "pure-eth-connector"
version = "0.1.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"
license = "Apache2"
publish = false
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
debug-assertions = false

[dependencies]
wee_alloc = { version = "0.4.5", default-features = false }
rlp = { version = "0.5", default-features = false }
borsh = { version = "0.8", default-features = false }
primitive-types = { version = "0.8.0", default-features = false, features = ["rlp"] }
rustc-hex = { version = "2.0", default-features = false }
tiny-keccak = { version = "1.4", features = ["keccak"]}
ethereum-types = { git = "https://github.com/darwinia-network/parity-common.git", default-features = false }
rstd = { package = "sp-std", git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-develop", default-features = false }
sha3 = { version = "0.8", default-features = false }
serde = { version = "1.0", default-features = false, features=["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features=["alloc"] }

[dev-dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs", tag = "3.0.0" }
near-sdk-sim = { git = "https://github.com/near/near-sdk-rs", tag = "3.0.0" }
funty = "=1.1.0" # temp pin of funty as 1.2.0 is API breaking
